# mistflow

./: .gitignore  README.md  mistflow.py  pyproject.toml  upload.py
src/mistflow/: __init__.py  __main__.py  workflow.py
src/mistflow/runners/: task_runner.py  workflow_runner.py
src/mistflow/tasks/test/add100/: main.py
src/mistflow/tasks/test/square/: main.py  models.py
src/mistflow/utils/: pip_installer.py
src/mistflow/workflows/test/number_magic/: main.py
src/mistflow/workflows/test/number_magic2/: main.py
src/tasks/test/add100/: main.py
src/tasks/test/call_dummy_api/: main.py  models.py
src/tasks/test/square/: main.py
src/workflows/test/number_magic/: main.py
src/workflows/test/number_magic2/: main.py  utils.py
stages/test/square/: main.py  models.py
tasks/test/add100/: models.py
workflows/test/number_magic/: main.py  models.py
workflows/test/number_magic2/: main.py  models.py
workflows/test_workflow/: main.py
