[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistflow"
version = "0.0.4"
authors = [
  { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "Lib for automation workflow app ie easy-to-use automation for non-techies"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/zlliu246/mistflow"
Issues = "https://github.com/zlliu246/mistflow/issues"